--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,24 +3,26 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- main
+  - main
 
 resources:
-- repo: self
+  - repo: self
 
 stages:
-- stage: Build
-  displayName: Build image
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: ubuntu-latest
-    steps:
-    - task: DockerCompose@0
-      inputs:
-        containerregistrytype: 'Azure Container Registry'
-        azureSubscription: 'Azure subscription 1(fa94a86f-1cd0-4a1c-a291-1cfea912da2e)'
-        dockerComposeFile: '**/docker-compose.yaml'
-        action: 'Run a Docker Compose command'
-        dockerComposeCommand: 'run docker compose'
+  - stage: Build
+    displayName: Build image
+    jobs:
+      - job: Build
+        displayName: Build
+        pool:
+          name: ReactJS
+          demands:
+            - VM1
+        steps:
+          - task: DockerCompose@0
+            inputs:
+              containerregistrytype: 'Azure Container Registry'
+              azureSubscription: 'Azure subscription 1(fa94a86f-1cd0-4a1c-a291-1cfea912da2e)'
+              dockerComposeFile: '**/docker-compose.yaml'
+              action: 'Run a Docker Compose command'
+              dockerComposeCommand: 'run docker compose'
